# TeTr1k-T-sk

./: README.md  pyproject.toml
task1/: solution.py  test_solution.py
task2/: beasts.csv  solution.py  test_solution.py
task3/: solution.py  test_solution.py
